# Lemon

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
Lemon/: CMakeLists.txt  premake5.lua
Lemon/src/: pch.h
Lemon/src/Lemon/: Lemon.h
Lemon/src/Lemon/Core/: Application.cpp  Application.h  Core.h  Logger.cpp  Logger.h  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Lemon/src/Lemon/Events/: ApplicationEvents.h  Event.h  EventManager.cpp  EventManager.h
Lemon/src/Platform/: WindowsWindow.cpp
Lemon/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  premake5.lua
Sandbox/src/: main.cpp
scripts/: setup-vs22.bat
